set(WALLPAPERS
    Also_Calm.png
    Arancio.jpg
    Crane_Beach.jpg
    Grass.jpg
    Halfway_Gone.jpg
    Hawaii-blue.jpg
    Lighthouse_Cork.jpg
    Pink_Clouds.jpg
    Springlight.jpg
    Woods_of_Sweden.jpg
)

install(FILES ${WALLPAPERS} DESTINATION ${CMAKE_INSTALL_DATADIR}/backgrounds/hawaii)
