install(DIRECTORY fallingleaves/ DESTINATION ${CMAKE_INSTALL_DATADIR}/hawaii/wallpapers/org.hawaii.fallingleaves)
install(DIRECTORY randomcolors/ DESTINATION ${CMAKE_INSTALL_DATADIR}/hawaii/wallpapers/org.hawaii.randomcolors)
install(DIRECTORY swirl/ DESTINATION ${CMAKE_INSTALL_DATADIR}/hawaii/wallpapers/org.hawaii.swirl)
